--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Digiverz</title>
+  <title>Sales Forecast</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -15,4 +15,4 @@
 <body class="mat-typography">
   <app-root></app-root>
 </body>
-</html>
+</html> 
